--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,8 @@ dependencies:
   cached_network_image :
   image_picker :
   firebase_storage: 
-  firebase_core: ^2.25.4
+  firebase_core: 
+  dropdown_button2 :
   
 
 dev_dependencies:
