--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_core: 
   dropdown_button2 :
   
+  
 
 dev_dependencies:
   flutter_test:
@@ -60,9 +61,18 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  flutter_launcher_icons :
+
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+
+flutter_launcher_icons:
+    android: "launcher_icon"
+    ios: true
+    remove_alpha_ios: true
+    image_path: "assets/images/settings-icon.png"
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -75,7 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - .env
-  #   - images/a_dot_burr.jpeg
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
